--- a/frontend/index.html
+++ b/frontend/index.html
@@ -332,6 +332,6 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
